# pydft

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  environment.yml  meta.yaml  pyproject.toml  setup.py
.github/workflows/: build_conda.yml  build_pypi.yml  docs.yml
docs/: api.rst  background.rst  community_guidelines.rst  conf.py  index.rst  installation.rst  user_interface.rst
docs/_static/css/: custom.css
docs/_templates/: breadcrumbs.html
docs/scripts/: 00-start.py  00-verbose.py  00-xc.py  01-electron-density.py  02-electron-density-gradient.py  03-energy-decomposition.py  03-matrices.py  04-kohn-sham-orbitals.py  05-orbital-contour-plot.py  06-becke-grid.py  06-grid-points.py  07-hartee-potential.py  07-spherical-harmonics-projection.py  08-correlation-potential.py  08-exchange-potential.py
examples/: .gitignore  benzene_atomic_cells.py  bonding_analysis_co.py  co.py  co_screening.py  co_xc.py  dft_vs_hf.py  h2.py
pydft/: __init__.py  angulargrid.py  atomicgrid.py  bragg_slater.py  dft.py  moleculargrid.py  spherical_harmonics.py  xcfunctionals.py
tests/: test_bragg_slater.py  test_custom_basisset.py  test_dft.py  test_energy_decomposition.py  test_moleculargrid.py  test_normalization.py  test_version.py  test_xc.py
